Completed javascript to control buttons and sounds

--- a/index-START.html
+++ b/index-START.html
@@ -57,7 +57,28 @@
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
-<script>
+<script>  
+  function playSound(e){
+    // Attribute selectors using es6 template strings.
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+    // Stops the function if no audio file associated.
+    if(!audio) return; 
+    // Restarts the sound before next play
+    audio.currentTime = 0;
+    audio.play();
+    key.classList.add('playing');
+  };
+
+  function removeTransition(e){
+    // Skip if it's not a transform
+    if (e.propertyName !== 'transform') return;
+    this.classList.remove('playing');
+  };
+
+  const keys = document.querySelectorAll('.key');
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+  window.addEventListener('keydown', playSound);
 
 </script>
 
